fixed data issues, removed spoilers, added change mind, meta tags

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="/src/assets/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Meleeman" />
+    <meta name="twitter:title" content="My Hero Academia Smash or Pass" />
+    <meta name="twitter:description" content="smash or pass any of the MHA characters, and compare your results with your friends or the world!" />
+    <meta name="twitter:image" content="https://smashorpass.vfpmedia.com/siteImg.jpeg" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="My Hero Academia Smash or Pass" />
+    <meta property="og:description" content="smash or pass any of the MHA characters, and compare your results with your friends or the world!" />
+    <meta property="og:url" content="https://smashorpass.vfpmedia.com" />
+    <meta property="og:image" content="https://smashorpass.vfpmedia.com/siteImg.jpeg" />
+    <title>Smash or Pass My Hero Academia version</title>
   </head>
   <body style="margin:0;">
     <div id="app"></div>
